added dto for the goal
